# snake

./: CMakeLists.txt  main.cpp
include/: food.hpp  game.hpp  renderer.hpp  snake.hpp
src/: food.cpp  game.cpp  renderer.cpp  snake.cpp
